fix: contrast errors

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -237,8 +237,8 @@ max-width: 1040px;
 padding: 0.7rem 0.7rem;
     border: 2px solid #6ea7ff;
     border-radius: 10px;
-    background: #f0c75e;
-    color: #4271d0;
+background: #f0c75e;
+    color: #071b44;
 font-family: "Bungee", sans-serif;
     font-size: 1rem;
     text-transform: uppercase;
